fix: admin profile card and content overflow problem

--- a/docs/admin/assets/css/admin_profile.css
+++ b/docs/admin/assets/css/admin_profile.css
@@ -33,7 +33,6 @@ main {
     width: 100%;
     margin: 20px;
     padding: 15px 45px 45px 45px;
-    max-height: 100vh;
 }
 
 h1 {
